<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white" >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.View.LoginScreenView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp">

                <androidx.constraintlayout.widget.Group
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="tv_create_user,
                    et_login_username,
                    et_new_user_password,
                    bt_login,
                    tv_new_user"
                    android:id="@+id/group_login" />

                <TextView
                    android:id="@+id/tv_create_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/enter_app"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/user"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_user" />

                <EditText
                    android:id="@+id/et_new_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/et_login_username" />

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_rounded"
                    android:backgroundTint="@color/primary_color_yellow"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintTop_toBottomOf="@id/et_new_user_password" />

                <TextView
                    android:id="@+id/tv_new_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/create_user_button"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_login" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_loading"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:lottie_rawRes="@raw/loadinganimation"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>